--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         </div>
         <div class="desc">
             <h3>end of studies internship</h3>
-            <p> 02/2022 - 60/2023</p>
+            <p> 02/2022 - 06/2023</p>
             <p style="font-size: 15px;font-weight: bold;">The development of a module "Human Resources Management"</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
             <p style="font-size: 14px;">- Manage departments, employees, contracts . </p>
@@ -504,36 +504,7 @@
       </div>
     </div>
 
-   <!-- <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
-      <i class="fas fa-arrow-right"></i>
-  </a>
-  </div>-->
+   
 
 </div>
 
@@ -543,7 +514,7 @@
 <section class="certif" id="certif">
   <br/> <br/> <br/>
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Certificates</h2>
 
   <div class="box-container">
 
