--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    
         
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/fatengargouri.jpg" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/profile.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
