--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="content">
       <h3>Bachelor in Information Systems Development</h3>
       <p>Higher Institute of Technological Studies of sfax</p>
-      <h4>2019-2020 | Completed</h4>
+      <h4>2019-2022 | Completed</h4>
       </div>
     </div>
 
@@ -327,7 +327,7 @@
         <h3>Development & Test Project</h3>
         </div>
         <div class="desc">
-          <p>- Develop an admin area to manage categories and cars and a customer area to book and
+          <p>- Develop an admin section to manage categories and cars and a customer section to book and
             pay for rentals with Spring Boot and Angular . </p>
           <p>- Execute backend API testing with Postman .  </p>
           <!--<p>- Exécuter des tests de performance et de charge avec Jmeter .</p>-->
