--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@
     </div>
   </div> 
 
+<div class="bar">
+    <div class="info">
+      <img width="40px" , height ="40px" src="./assets/images/skills/ansible.png"/>
+      <span>Ansible</span>
+    </div>
+  </div> 
+          
+
   
   <div class="bar">
     <div class="info">
