--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <p style="font-size: 14px;">- Implement CI/CD pipelines with Jenkins for
               automate execution, testing and continuous deployment.</p>
             <p style="font-size: 14px;">- Execute Docker containers in VPS.</p>
-            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Mots clés : </span>VPS / Linux / Git / Jenkins / Docker</p>
+            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span>VPS / Linux / Git / Jenkins / Docker</p>
         </div>
 
       </div>
@@ -470,7 +470,7 @@
             <p style="font-size: 14px;">- Manage departments, employees, contracts . </p>
             <p style="font-size: 14px;">- Manage schedules, attendance, leave and absences.</p>
             <p style="font-size: 14px;">- Dashboard and manage periodic reports.</p>
-            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Mots clés : </span>Odoo 15/ ProstgreSQL / Python / XML / CSS</p>
+            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords: </span>Odoo 15/ ProstgreSQL / Python / XML / CSS</p>
         </div>
       </div>
     </div>
@@ -488,7 +488,7 @@
           <p style="font-size: 14px;">- Manage departments, employees, contracts . </p>
           <p style="font-size: 14px;">- Manage schedules, attendance, leave and absences.</p>
           <p style="font-size: 14px;">- Dashboard and manage periodic reports.</p>-->
-          <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Mots clés : </span>Python / Django / Bootstrap / CSS / SQLite
+          <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span>Python / Django / Bootstrap / CSS / SQLite
           </p>
       </div>
       </div>
@@ -505,7 +505,7 @@
             <p style="font-size: 15px;">Develop a desktop application for transport management
               deliveries to manage vehicles, drivers, orders and
               destinations .</p>
-              <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Mots clés : </span>Windev17 / HF SQL
+              <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span>Windev17 / HF SQL
 
               </p>
         </div>
