--- a/index.html
+++ b/index.html
@@ -406,6 +406,24 @@
       <img draggable="false" src="./assets/images/projects/cluster.PNG" alt="" />
       <div class="content">
         <div class="tag">
+        <h3>TestOps </h3>
+        </div>
+        <div class="desc">
+          <p>- Define behavior scenarios with Cucumber .</p>
+          <p>- Develop automated test scripts with Cypress . </p>
+          <p>- Integrate tests into the CI/CD pipeline using Jenkins .</p>
+          <div class="btns">
+            <!--<a href="https://drive.google.com/file/d/17bOJZj7_DqdV8uSPiLLQAP3RvAfUQcNl/view?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>-->
+            <a href="https://github.com/FatenGargouri/TestOps" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div> 
+
+      <div class="box tilt">
+      <img draggable="false" src="./assets/images/projects/cluster.PNG" alt="" />
+      <div class="content">
+        <div class="tag">
         <h3>Deploying an Application on AKS Project </h3>
         </div>
         <div class="desc">
