--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <i class="fas fa-arrow-circle-down"></i>
     </a>-->
     <p style="font-size: 17px;">
-      Passionate about DevOps , Test Automation and the acquisition of all aspects of new technologies that are emerging every day. I am ready for new challenges.
+      Passionate about Test Automation and the acquisition of all aspects of new technologies that are emerging every day. I am ready for new challenges.
     </p>
     <p style="font-size: 17px;"><span style="font-size: 17px;"> Place : </span> Sfax , Tunisia</p>
         <!--<p style="font-size: 17px;"><span style="font-size: 17px;"> Phone : </span> +216 23 575 190</p>-->
@@ -456,6 +456,23 @@
   <h2 class="heading"><i class="fas fa-briefcase"></i> professional internships </h2>
 
   <div class="timeline">
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Intellitech</h2>
+        </div>
+        <div class="desc">
+            <h3>end of year internship || Automation Testing</h3>
+            <p> 02/2022 - 06/2023</p>
+            <p style="font-size: 15px;font-weight: bold;">Implementation of automated end-to-end tests for a web application</p>
+            <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
+            <p style="font-size: 14px;">- Develop automated functional test scripts. </p>
+            <p style="font-size: 14px;">- Execute test suites and generate test reports.</p>
+            <p style="font-size: 14px;">- Perform performance and load testing.</p>
+            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords: </span>Git / Katalon / Java / Selenium / JMeter</p>
+        </div>
+      </div>
+    </div>  
 
     <div class="container right">
       <div class="content">
