--- a/index.html
+++ b/index.html
@@ -458,6 +458,26 @@
   <h2 class="heading"><i class="fas fa-briefcase"></i> professional internships </h2>
 
   <div class="timeline">
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Artibedded</h2>
+        </div>
+        <div class="desc">
+            <h3>DevOps | Internship</h3>
+            <p> 06/2023 - 09/2023</p>
+            <p style="font-size: 15px;font-weight: bold;">Implementing an infrastructure for an CI/CD process within a DevOps cycle on a VPS server</p>
+            <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
+            <p style="font-size: 14px;">- Manage merge requests during code reviews.</p>
+            <p style="font-size: 14px;">- Implement CI/CD pipelines with Jenkins for
+              automate execution, testing and continuous deployment.</p>
+            <p style="font-size: 14px;">- Execute Docker containers in VPS.</p>
+            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span>VPS / Linux / Git / Jenkins / Docker</p>
+        </div>
+
+      </div>
+    </div>
     <div class="container left">
       <div class="content">
         <div class="tag">
