--- a/index.html
+++ b/index.html
@@ -462,18 +462,19 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Artibedded</h2>
+          <h2>Sofrecom Tunisie</h2>
         </div>
         <div class="desc">
-            <h3>DevOps | Internship</h3>
+            <h3>TestOps| Internship</h3>
             <p> 06/2023 - 09/2023</p>
             <p style="font-size: 15px;font-weight: bold;">Implementing an infrastructure for an CI/CD process within a DevOps cycle on a VPS server</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
-            <p style="font-size: 14px;">- Manage merge requests during code reviews.</p>
-            <p style="font-size: 14px;">- Implement CI/CD pipelines with Jenkins for
-              automate execution, testing and continuous deployment.</p>
-            <p style="font-size: 14px;">- Execute Docker containers in VPS.</p>
-            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span>VPS / Linux / Git / Jenkins / Docker</p>
+            <p style="font-size: 14px;">- Identify valid and error test cases for each feature.</p>
+            <p style="font-size: 14px;">- Develop automated frontend test scripts.</p>
+            <p style="font-size: 14px;">- Execute the test cases and generate test reports.</p>
+            <p style="font-size: 14px;">- Implement a pipeline to check code quality.</p>
+            <p style="font-size: 14px;">- Implement a pipeline to execute test suites.</p>
+            <p style="font-size: 13px;"><span style="font-size: 13px;font-weight: bold;">Keywords : </span> Jira / Python / Sélénium / Robot Framework / Git / Gitlab-CI </p>
         </div>
 
       </div>
