--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
         </div>
         <div class="desc">
             <h3>TestOps| Internship</h3>
-            <p> 06/2023 - 09/2023</p>
-            <p style="font-size: 15px;font-weight: bold;">Implementing an infrastructure for an CI/CD process within a DevOps cycle on a VPS server</p>
+            <p> 02/2025 - 06/2025</p>
+            <p style="font-size: 15px;font-weight: bold;">Frontend Automated Testing Implementation</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
             <p style="font-size: 14px;">- Identify valid and error test cases for each feature.</p>
             <p style="font-size: 14px;">- Develop automated frontend test scripts.</p>
