--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <h2>Sofrecom Tunisie</h2>
         </div>
         <div class="desc">
-            <h3>TestOps| Internship</h3>
+            <h3>End of studies internship</h3>
             <p> 02/2025 - 06/2025</p>
             <p style="font-size: 15px;font-weight: bold;">Frontend Automated Testing Implementation</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
@@ -485,7 +485,7 @@
           <h2>Intellitech</h2>
         </div>
         <div class="desc">
-            <h3>end of year internship || Automation Testing</h3>
+            <h3>End of year internship || Automation Testing</h3>
             <p> 06/2024 - 08/2024</p>
             <p style="font-size: 15px;font-weight: bold;">Implementation of automated end-to-end tests for a web application</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
@@ -523,7 +523,7 @@
           <h2>IP-SOFT</h2>
         </div>
         <div class="desc">
-            <h3>end of studies internship</h3>
+            <h3>End of studies internship</h3>
             <p> 02/2022 - 06/2023</p>
             <p style="font-size: 15px;font-weight: bold;">The development of a module "Human Resources Management"</p>
             <p style="font-weight: bold;font-size: 13px;">Tasks :</p>
