--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/profile.jpg" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="./assets/images/1754911460609.jpeg" type="image/x-png">
     <title>Portfolio | Faten Gargouri</title>
 </head>
 <body oncontextmenu="return false">
